--- a/css/charts.scss
+++ b/css/charts.scss
@@ -154,8 +154,8 @@
       width: 100%;
       bottom: 50px;
       top: 100px;
-      max-height: 600px;
-      max-width: 1200px;
+      /*max-height: 600px;
+      max-width: 1200px;*/
     }
   }
 }
