--- a/css/main.scss
+++ b/css/main.scss
@@ -554,6 +554,15 @@ body {
   }
 }
 
+
+.script {
+	#data-lib {
+		h3#data-name {
+			font-size: 25px;
+		}
+	}
+}
+
 #data-lib {
 	display: none;
 	position: fixed;
@@ -587,20 +596,54 @@ body {
 	h3#data-name {
 		font-size: 30px;
 		font-weight: 100;
-		margin-top: 24px;
+		margin-top: 15px;
 
 		span {
 			font-size: 17px;
 			padding: 6px 24px 3px 5px;
 			border-radius: 3px;
 			position: relative;
-			top: -2px;
-			margin-right: 7px;
+			top: -1px;
+			margin-right: 5px;
+			margin-left: 2px;
+			height: 29px;
+			display: inline-block;
+
+			&:hover {
+				background-color: #f5f5f5;
+			}
 
 			.accent {
 				padding: 0;
 				margin: 0;
 				border-radius: 0;
+				height: auto;
+
+				&:hover {
+					background-color: none;
+				}
+			}
+		}
+
+		a.badge {
+			position: relative;
+		  top: 7px;
+		  border-radius: 3px;
+		  margin-right: 5px;
+		  margin-left: 2px;
+		  background-image: url("../images/star.svg");
+		  background-size: 63%;
+		  background-position: center center;
+		  background-repeat: no-repeat;
+		  display: inline-block;
+		  width: 29px;
+		  height: 29px;
+		  border: 1px solid #4973D6;
+		  color: #4973D6;
+		  padding: 0;
+
+			&:hover {
+				background-color: #f5f5f5;
 			}
 		}
 
