--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -558,7 +558,15 @@ body {
 .script {
 	#data-lib {
 		h3#data-name {
-			font-size: 23px;
+			font-size: 20px;
+
+			span {
+				top: -1px
+			}
+
+			a.badge {
+				top: 8px;
+			}
 		}
 	}
 }
@@ -596,16 +604,16 @@ body {
 	h3#data-name {
 		font-size: 30px;
 		font-weight: 100;
-		margin-top: 15px;
+		margin-top: 10px;
 
 		span {
-			font-size: 17px;
+			font-size: 16px;
 			padding: 6px 24px 3px 5px;
 			border-radius: 3px;
 			position: relative;
-			top: -1px;
-			margin-right: 5px;
-			margin-left: 2px;
+			top: -4px;
+			margin-right: 3px;
+			margin-left: 4px;
 			height: 29px;
 			display: inline-block;
 
@@ -627,9 +635,9 @@ body {
 
 		a.badge {
 			position: relative;
-		  top: 7px;
+		  top: 5px;
 		  border-radius: 3px;
-		  margin-left: 2px;
+		  margin-left: 4px;
 		  background-image: url("../images/star.svg");
 		  background-size: 63%;
 		  background-position: center center;
