--- a/css/main.scss
+++ b/css/main.scss
@@ -251,9 +251,27 @@ body {
   	background-color: white;
   	padding: 8px 10px;
   	cursor: pointer;
+  	position: relative;
+
+  	&:after {
+			content: 'Search';
+			color: #29BD66;
+			position: absolute;
+			right: 9px;
+			top: 11px;
+			text-transform: uppercase;
+			font-size: 11px;
+			letter-spacing: 1px;
+			font-weight: 600;
+			opacity: 0;
+  	}
 
   	&:hover {
   		background-color: #f5f5f5;
+
+  		&:after {
+  			opacity: 1;
+  		}
   	}
   }
 }
