--- a/css/main.scss
+++ b/css/main.scss
@@ -722,8 +722,8 @@ body {
 		margin-top: 10px;
 
 		span {
-			font-size: 16px;
-			padding: 6px 24px 3px 5px;
+			font-size: 15px;
+			padding: 5px 22px 4px 5px;
 			border-radius: 3px;
 			position: relative;
 			top: 0px;
@@ -731,6 +731,7 @@ body {
 			height: 29px;
 			display: inline-block;
 			float: right;
+			font-family: "Avenir Medium";
 
 			&:hover {
 				background-color: #f5f5f5;
@@ -755,13 +756,13 @@ body {
 		  margin-left: 5px;
 		  background-image: url("../images/star.svg");
 		  background-size: 63%;
-		  background-position: center center;
+		  background-position: 5px 5px;
 		  background-repeat: no-repeat;
 		  display: inline-block;
 		  float: right;
 		  width: 29px;
 		  height: 29px;
-		  border: 1px solid #4973D6;
+		  border: 1px solid #29BD66;
 		  padding: 0;
 
 			&:hover {
@@ -832,11 +833,11 @@ body {
 			background-color: none;
 			position: absolute;
 			right: 30px;
-			top: 163px;
+			top: 193px;
 			line-height: 1;
 			margin: 0;
 			padding: 0;
-			background: -webkit-linear-gradient(rgba(41,189,102,.12), rgba(41,189,102,.05));
+			background: -webkit-linear-gradient(rgba(41,189,102,.14), rgba(41,189,102,.11));
 		  -webkit-background-clip: text;
 		  -webkit-text-fill-color: transparent;
 		}
