--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -262,7 +262,6 @@ body {
 		border-bottom: 6px solid #fff;
 	}
 
-
   &.show {
   	display: block;
   }
@@ -678,7 +677,8 @@ body {
 	#data-lib {
 		h3#data-name {
 			font-size: 20px;
-
+		}
+		.badge-container {
 			span, a.badge {
 				top: -3px
 			}
@@ -702,24 +702,34 @@ body {
 	visibility: hidden;
 	transition: opacity 400ms ease;
 
-	.close {
-		display: none;
-		position: absolute;
-		top: 30px;
-		right: 30px;
-		line-height: 13px;
-		border-radius: 4px;
-		background-color: #29BD66;
-		color: #FFF;
-		padding: 14px 16px 10px 16px;
-		font-weight: bold;
-		font-size: 15px;
+	.center-header {
+		height: 55px;
 	}
 
 	h3#data-name {
 		font-size: 30px;
 		font-weight: 100;
-		margin-top: 10px;
+		margin: 0;
+		float: left;
+		max-width: 270px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		span {
+			margin-left: 10px;
+		  color: #00D075;
+		  border-bottom: 2px solid #7ADBB1;
+		  font-weight: 600;
+		  font-size: 14px;
+		  letter-spacing: 0.5px;
+		  padding: 0 1px 2px;
+		  cursor: pointer;
+		  display: none;
+		}
+	}
+
+	.badge-container {
+		float: right;
 
 		span {
 			font-size: 15px;
@@ -832,8 +842,8 @@ body {
 			color: rgba(41,189,102,.1);
 			background-color: none;
 			position: absolute;
-			right: 30px;
-			top: 193px;
+			right: 20px;
+  		top: 187px;
 			line-height: 1;
 			margin: 0;
 			padding: 0;
@@ -968,15 +978,14 @@ body {
   }
 }
 
-
-tr.noHover {
+p.noHover {
 	border: 0!important;
   font-size: 28px;
   text-align: center;
-
-	&:hover {
-		background-color: #FCFCFC!important;
-	}
+  color: #FA2F21;
+  display: inline-block;
+  width: 100%;
+  margin-top: 62px;
 }
 
 #data {
@@ -991,10 +1000,21 @@ tr.noHover {
 	  position: absolute;
 	  left: 0;
 	  font-size: 18px;
-	  top: 35px;
+	  top: 28px;
 	  width: 100%;
 	  text-align: center;
-	  z-index: 10;
+	  z-index: 2000;
+
+	  span {
+			margin: 0 auto;
+			color: #00D075;
+			border-bottom: 2px solid #7ADBB1;
+			font-weight: 600;
+			font-size: 14px;
+			letter-spacing: .5px;
+			padding: 0 1px 2px;
+			cursor: pointer;
+	  }
 	}
 
 	#col_wrap {
@@ -1568,7 +1588,6 @@ footer {
 	display: block;
 }
 
-
 /***************
   Media Queries
 ***************/
@@ -1584,13 +1603,13 @@ footer {
 }
 
 @media screen and ( max-height: 735px ){
-    #howTo {
-    	margin-top: 70px;
-    }
+  #howTo {
+  	margin-top: 70px;
+  }
 
-    #header {
-    	margin-top: 40px;
-    }
+  #header {
+  	margin-top: 40px;
+  }
 }
 
 @media screen and ( max-height: 530px ){
@@ -1601,15 +1620,6 @@ footer {
   .directions {
     bottom: 75px;
   }
-}
-
-@media screen and ( max-width: 1200px ){
-	.results #data {
-		table {
-			font-size: 22px;
-      margin-bottom: 75px;
-		}
-	}
 }
 
 @media screen and ( max-width: 1400px ){
@@ -1626,7 +1636,7 @@ footer {
 		#data-lib {
 			top: 0;
 			bottom: auto;
-			height: 57%;
+			height: 62%;
 			width: 100%;
 			left: 0;
 			border-right: 0;
@@ -1638,6 +1648,7 @@ footer {
 			  font-size: 27px;
 			  font-weight: 300;
 			  margin-top: 0;
+			  max-width: none;
 			}
 
 			.bottomCompare {
@@ -1648,7 +1659,7 @@ footer {
 		&.results{
 			#data {
 			  padding: 0 40px 0 440px;
-			  height: 44%;
+			  height: 39%;
 			  position: absolute;
 			  width: 100%;
 			  bottom: 0;
@@ -1684,6 +1695,22 @@ footer {
 	}
 }
 
+@media screen and ( max-width: 1200px ){
+	.results #data {
+		table {
+			font-size: 22px;
+      margin-bottom: 75px;
+		}
+	}
+
+	.slim {
+		#data-lib {
+			h3#data-name {
+			  font-size: 22px;
+			}
+		}
+	}
+}
 
 @media screen and ( max-width: 1050px ){
 	.results #data {
@@ -1711,9 +1738,50 @@ footer {
 			}
 		}
 	}
+
+	.slim {
+		#data-lib {
+			h3#data-name {
+			  max-width: 175px;
+			  font-size: 20px;
+			}
+		}
+	}
 }
 
 @media screen and ( max-width: 850px ){
+	p.noHover {
+	  font-size: 23px;
+	  margin-top: 37px;
+	}
+
+	#data-lib {
+		.center-header {
+		  margin-bottom: 10px;
+		}
+
+		h3#data-name {
+			display: block;
+		  width: 100%;
+		  text-align: center;
+		  margin-bottom: 15px;
+		}
+
+		.badge-container {
+		  float: none;
+		  margin: 0 auto;
+		  clear: left;
+		  text-align: center;
+
+		  span, a.badge {
+		  	float: none;
+		  	display: inline-block;
+		  	vertical-align: top;
+		  	top: 0;
+		  }
+		}
+	}
+
 	.slim {
 		#data-lib {
 			top: auto;
@@ -1738,10 +1806,8 @@ footer {
 				height: 100%;
 	  	}
 
-	  	.close {
-	  		display: block;
-	  		top: 80px;
-  			right: 31px;
+	  	h3#data-name {
+	  		max-width: none;
 	  	}
 	  }
 
@@ -1812,6 +1878,10 @@ footer {
 			}
 
 			input#mobile-submit {
+				font-size: 12px;
+				text-transform: uppercase;
+				font-weight: 600;
+				letter-spacing: .5px;
 				display: block;
 				border: 0;
 				background-color: #00D075;
@@ -1831,6 +1901,7 @@ footer {
 
 		input {
 			width: 78%;
+			height: 50px;
 			float: left;
 			margin-right: 2%;
 		}
@@ -1849,8 +1920,6 @@ footer {
 		}
 
 		#slogan {
-			// max-width: 461px;
-			// margin: 0 auto 26px auto;
 			display: none!important;
 		}
 
@@ -1894,7 +1963,7 @@ footer {
 
 		#data.sticky {
 			top: 160px;
-      padding-bottom: 80px;
+      padding-bottom: 30px;
 		}
 	}
 
@@ -1908,6 +1977,20 @@ footer {
 	#searchSymbols {
 		margin-right: -20px;
 	}
+
+	.results {
+		footer {
+			width: 100%;
+		}
+	}
+
+	#data #data_cols div a {
+		display: none;
+	}
+
+  .results .directions {
+    display: none;
+  }
 }
 
 @media screen and ( max-width: 650px ){
@@ -1989,19 +2072,7 @@ footer {
 }
 
 @media screen and ( max-width: 850px ){
-	.results {
-		footer {
-			width: 100%;
-		}
-	}
 
-	#data #data_cols div a {
-		display: none;
-	}
-
-  .results .directions {
-    display: none;
-  }
 }
 
 @media screen and ( max-height: 675px ){
@@ -2030,18 +2101,83 @@ footer {
 	}
 }
 
-@media screen and ( max-width: 420px ){
+@media screen and ( max-width: 500px ){
 	#query {
 		#queryButtons {
 			padding: 0;
 		}
 	}
+	#data .showChart {
+		top: 20px;
+	}
+	
+	#data-lib .center-header {
+	  margin: 10px 0 20px 0;
+	}
 
-	.results {
+	.results {	
+		&.slim {
+			#data-lib.open {
+			  top: 125px;
+			  padding: 25px;
+
+			  #time-series .bigNumber {
+			  	font-size: 80px;
+			  }
+
+			  .badge-container {
+			  	a.badge, span {
+			  		float: none;
+			  		display: inline-block;
+			  	}
+			  }
+
+			  h3#data-name {
+			  	font-size: 20px;
+			  	text-align: center;
+			  }
+			}
+
+			#data {
+				padding: 0 20px;
+				table {
+					font-size: 16px;
+					td {
+  					padding: 8px 0 6px 0;
+  				}
+  			}
+			}
+		}
 
 		input {
 			width: 72%;
 			margin-right: 3%;
+			padding: 12px 12px 10px 12px;
+			height: 43px;
+		}
+
+		input[type='submit'] {
+			font-size: 12px;
+			text-transform: uppercase;
+			font-weight: 600;
+			letter-spacing: .5px;
+		}
+
+		#header {
+			margin-bottom: 15px;
+
+			#header-code {
+				display: none;
+			}
+
+			#header-logo {
+				font-size: 23px;
+				margin-bottom: 0;
+			}
+
+			a {
+				display: none;
+			}
 		}
 
 		#query {
@@ -2051,19 +2187,28 @@ footer {
 		}
 
 		#data {
-			padding: 0 25px;
+			padding: 0 20px;
+
+			table {
+				font-size: 16px;
+			}
+
+			&.sticky {
+  			top: 127px;
+  		}
+
+			#col_wrap {
+			  height: 15px;
+  			line-height: 62px;
+			}
 		}
 
 		#searchWrap {
-			padding: 25px 25px 35px 25px;
-		}
-
-		#searchWrap.sticky {
-			padding: 25px;
+			padding: 20px 20px 22px;
 		}
 
 		footer {
-			padding: 12px 25px 12px 25px;
+			padding: 12px 20px 12px 20px;
 		}
 	}
 }
